<resources>
    <string name="app_name">Android_final_project</string>
    <string name="VIP">VIP</string>
    <string name="General">General</string>
    <string name="Identity">Identity: </string>
    <string name="Points">Points: </string>
    <string name="Treasure">Treasure</string>
    <string name="Fight">Fight</string>
    <string name="Store">Store</string>

    <string name="Nyancat">Nyan cat</string>
    <string name="Mouse">Bandit mouse</string>
    <string name="Teacher">Lincyu</string>
    <string name="Not_obtained">Not obtained</string>

    <!--    activity_vip-->
    <string name="upgrade_vip">Upgrade VIP</string>
    <string name="account">Credit Card Number:</string>
    <string name="verification">Security Verification code:</string>
    <string name="valid_date">Valid date:</string>
    <string name="pay_button">PAY :)</string>
    <!--    activity_fighting-->
    <string name="level">Level </string>
    <!--    activity_stroe-->
    <string name="store">Store</string>

    <string name="treasurePosition">Treasure Position:</string>
    <string name="currentPosition">Current Position:</string>
    <string name="distanceTo">Distance to Treasure:</string>
    <string name="navigation">Navigation</string>
    <string name="string_to_vip">Upgrade VIP To Use Navigation</string>

    <string name="Navigation_btn">Navigation</string>
    <string name="hp">HP: </string>

    <string name="stop">STOP</string>
    <string name="start">start</string>
    <string name="pause">Pause</string>

    <string name="loading">loading...</string>

    <string name="set_treasure">Set Treasure Time!</string>
    <string name="treasure_not_ready">Treasure is not ready!</string>
    <string name="treasure_over">Treasure time is over!</string>
    <string name="next_treasure">Set The Next Treasure Time!</string>
    <string name="treasure_time">Treasure Time!!!</string>
    <string name="no_money">You don\'t have enough points!</string>
    <string name="HP_full">Your HP is Full</string>
    <string name="take_off_hat">Take off the hat!</string>
    <string name="wear_hat">Wear the hat!</string>
    <string name="change_weapon">Change the weapon!</string>
    <string name="no_weapon">You don\'t have weapon now!</string>
    <string name="not_vip">Sorry, you\'re not VIP</string>
    <string name="no_position">Can\'t get position</string>
    <string name="change_position">Location has changed</string>
    <string name="earn_100">Congratulation! You Earn 100 Points</string>
    <string name="find">You had already found the Treasure!</string>

    <string name="win">You\'re winner!</string>
    <string name="getSong">You obtained the boss\'s song.</string>
    <string name="loss">Not enough blood.</string>

    <string name="invalid_credit_card_number">Invalid Credit Card Number</string>
    <string name="invalid_verification_code">Invalid Verification Code</string>
    <string name="wrong_input_format">Wrong input format(Valid date)</string>
    <string name="invalid_input">Invalid input(Valid date)</string>
    <string name="expired_credit_card">Expired Credit Card</string>
    <string name="congratulation">Congratulation! \nYou are VIP now</string>

</resources>