<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">
            <Button
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VIP"
                android:textSize="25sp"
                android:id="@+id/VIP_btn"
                android:backgroundTint="@color/gold"
                tools:ignore="MissingConstraints"></Button>
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--        col name: value        -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Identity"
                        android:textSize="18sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:id="@+id/Identity_tv"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Points"
                        android:textSize="18sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:id="@+id/Points_tv"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hp"
                        android:textSize="18sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:id="@+id/hp"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id = "@+id/last_row">
            // https://evanchen76.medium.com/android-ui-%E4%BD%88%E5%B1%80part5-%E5%85%83%E4%BB%B6%E7%9A%84%E5%B1%AC%E6%80%A7-b4831205f526
            // layout_weight控制排版
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Treasure"
                android:layout_marginHorizontal="3sp"
                android:id="@+id/Treasure_btn">
            </Button>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fight"
                android:layout_marginHorizontal="3sp"
                android:id="@+id/Fight_btn">
            </Button>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Store"
                android:layout_marginHorizontal="3sp"
                android:id="@+id/Store_btn">
            </Button>
        </LinearLayout>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/presure"
            android:id="@+id/music_btn"
            android:layout_above="@+id/last_row"
            >
        </ImageButton>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cat_imgview"
            android:layout_above="@+id/last_row"
            android:adjustViewBounds="true">
        </ImageView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weapon_imgview"
            android:layout_above="@+id/last_row"
            android:adjustViewBounds="true">
        </ImageView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hat_imgview"
            android:layout_above="@+id/last_row"
            android:adjustViewBounds="true">
        </ImageView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>